# smstools3-uw

./: .gitignore  AUTHORS  Makefile.am  acinclude.m4  autoclean.sh  autogen.sh  configure.ac  sms3.in  smsd.conf.in
scripts/: Makefile.am
src/: Makefile  Makefile.am  charset.c  charset.h  extras.c  modeminit.c  pdu.c  smsd.c  smsd_cfg.c  smsd_cfg.h  smsd_cfg.h.in  stats.c
