dist_bin_SCRIPTS = \
  sendsms \
  sms2html \
  sms2unicode \
  unicode2sms

EXTRA_DIST = \
  README \
  callhandler \
  checkhandler-utf-8 \
  email2sms \
  eventhandler_report \
  eventhandler-utf-8 \
  forwardsms \
  hex2bin \
  hex2dec \
  load_balancing.sh \
  mysmsd \
  pkill \
  regular_run \
  sms2xml \
  smsevent \
  smsresend \
  smstest.php \
  sql_demo
